# rune

./: .gitignore  AUDIT.md  CHANGELOG.md  CNAME  Cargo.toml  GITHUB_SETUP.md  HOMEBREW_SETUP.md  LICENSE  README.md  docs.html  homebrew-formula.rb  index.html  install.sh  test.txt  test_replace.txt
.github/workflows/: ci.yml  release.yml
benches/: editor_perf.rs
docs/superpowers/plans/: 2026-04-11-hex-view.md  2026-04-11-nano-parity.md  2026-04-11-tabs-and-features.md
docs/superpowers/specs/: 2026-04-11-hex-view-design.md
src/: config.rs  editor.rs  fuzzy.rs  hex.rs  input.rs  lib.rs  main.rs  search.rs  syntax.rs  tabs.rs  ui.rs  updater.rs
tests/: test_editing.rs  test_find_replace.rs  test_navigation.rs
tests/helpers/: mod.rs
